Make sure following items don't prevent clicking editable text when they overlap

--- a/static/css/sheets.css
+++ b/static/css/sheets.css
@@ -889,6 +889,11 @@ body {
 	top: -14px;
 }
 
+.cke_editable {
+	position: relative;
+	z-index: 20;
+}
+
 .clear {
 	clear: both;
 }	
